# cudaAtScaleFinalAssignment

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.sh  Makefile  README.md  run.sh
helpers/: convertToPgm.py  convertToPng.py
include/cudaAtScaleFinalAssignment/: ImageProcessor.hpp  ImageTransformation.hpp  PgmDataGetter.hpp  PgmDataLoader.hpp  TiffDataLoader.hpp
src/: main.cpp  main.cu
